# FNNX

./: .gitignore  SPEC.md  mlflow.db
.github/workflows/: npm_publish.yml  pypi_publish.yml
spec/schemas/: combined.json
spec/schemas/src/: generate.py
spec/schemas/src/pydantic_models/: manifest.py
spec/schemas/src/pydantic_models/ops/: onnx.py
src/js/: pack.sh  package.json  pnpm-lock.yaml
src/python/: mlflow.db  pyproject.toml
src/python/examples/: mlflow_to_fnnx.py
src/python/fnnx/extras/: _mlflow_wrapper.py  builder.py  mlflow.py
src/python/tests/: test_extra_mlflow_e2e.py  test_extra_mlflow_frameworks.py  test_extra_mlflow_prophet.py  test_extra_mlflow_tensorflow.py  test_extra_mlflow_torch.py  test_extra_mlflow_variants.py  test_extra_mlflow_verify.py  test_mlflow_e2e.py  test_mlflow_langchain.py  test_mlflow_mapping.py  test_mlflow_tensorflow.py  test_mlflow_torch.py  test_mlflow_variants.py  test_mlflow_wrapper.py
src/python/tests/_mlflow_fixtures/: langchain_model.py  langgraph_model.py  torch_net.py
